projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/issubclass_rejects_str_classinfo_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "issubclass_rejects_str_classinfo_argument"
# subject = "issubclass"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""issubclass: issubclass_rejects_str_classinfo_argument (errors)."""
try:
    result = issubclass(int, "object")
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
